--- a/app/src/main/res/layout/muen_daohang.xml
+++ b/app/src/main/res/layout/muen_daohang.xml
@@ -14,4 +14,8 @@
         android:id="@+id/btm_nav_item3"
         android:icon="@android:drawable/ic_dialog_alert"
         android:title="菜单项3" />
+    <item
+        android:id="@+id/btm_nav_item4"
+        android:icon="@android:drawable/ic_menu_info_details"
+        android:title="菜单项4"/>
 </menu>
