--- a/app/src/main/res/layout/news.xml
+++ b/app/src/main/res/layout/news.xml
@@ -4,23 +4,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical" >
 
-    <RelativeLayout
-        android:id="@+id/jzfw_top_layout"
-        android:layout_width="match_parent"
-        android:layout_height="42dp"
-        android:background="#00ff00"
-        android:gravity="center_vertical" >
 
-        <TextView
-            android:id="@+id/jzfw_top_layout_02"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:layout_centerVertical="true"
-            android:text="仿京东分类"
-            android:textColor="#ffffff"
-            android:textSize="20sp" />
-    </RelativeLayout>
 
     <View
         android:layout_width="match_parent"
@@ -35,10 +19,11 @@
 
         <ListView
             android:id="@+id/listview"
-            android:layout_width="0dp"
+            android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:scrollbars="none"
-            android:layout_weight="1.0"
+            android:layout_weight="6"
+
             android:background="#f4f4f4" />
 
         <View
@@ -46,11 +31,13 @@
             android:layout_height="match_parent"
             android:background="#cdcdcd" />
 
-        <FrameLayout
-            android:id="@+id/fragment_container"
-            android:layout_width="0dp"
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/rec"
+            android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_weight="3.0" />
+            android:layout_weight="2">
+
+        </android.support.v7.widget.RecyclerView>
     </LinearLayout>
 
 </LinearLayout>
